Supply chain issue fix - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -4234,6 +4234,12 @@ ul.sapUshellInner {
             fill: #FFFFFF;
         }
     }
+    .v-info{
+        &:before{
+            content: '';
+            border: 0;
+        }
+    }
     .v-m-root {
         .v-gridline-group {
             .v-gridline {
@@ -4289,10 +4295,24 @@ ul.sapUshellInner {
                                 }
                             }
                         }
-                        &:nth-child(2), &:nth-child(3), &:last-child{
+                        &:nth-child(2){
+                            > .sapMFlexBoxBGTransparent{
+                                @media (min-width: 768px){
+                                    height: 500px;
+                                }
+                            } 
+                        }
+                       &:nth-child(3){
                             > .sapMFlexBoxBGTransparent{
                                 @media (min-width: 768px){
                                     height: 580px;
+                                }
+                            } 
+                        }
+                        &:last-child{
+                            > .sapMFlexBoxBGTransparent{
+                                @media (min-width: 768px){
+                                    height: 435px;
                                 }
                             } 
                         }
@@ -4312,7 +4332,7 @@ ul.sapUshellInner {
                                     float: left;
 
                                     &:first-child {
-                                        width: calc(100% - 15rem) !important;
+                                        width: calc(100% - 10rem) !important;
 
                                     }
                                     &:nth-child(2){
